front-end/src/pages/Account.css
.accountDashboard {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;

	width: 100%;
	height: fit-content;
	padding: 20px 40px;
}

section {
	margin: 1em;
}

.accountDetails {
	display: flex;
	flex-direction: row;

}

.accountDetailsFields {
	display: flex;
	flex-direction: column;
	justify-content: space-evenly;
	padding: 1em;
	min-width: 200px;
}

.accountDashboard .profileSummary {
	display: flex;

	max-width: 300px;
	padding: 20px;
	display: flex;
	flex-direction: column;
	gap: 1rem;
	align-items: center;
	justify-content: flex-start;
}

.accountDashboard .profileSummary img {
	max-width: 200px;
	height: auto;
	padding: 2rem;
	border-radius: 100%;
}

.accountDashboard .profileSummary .name {
	font-size: 1.6rem;
}

.accountDashboard .profileSummary .email {
	grid-column: 1;
	grid-row: 2;
}

.accountDashboard .accountControls {
	padding: 10px;
	display: flex;
	flex-direction: column;
	gap: 8px;
	align-items: center;
	justify-content: flex-start;
}

.accountDashboard .accountControls button {
	width: 100%;
}

.accountDashboard .accountControls button.deleteAccount {
	margin-top: 30px;
}

.accountDashboard .listings {
	grid-column: 2;
	grid-row: 1 / 2;
}

